Tweak codes to complete the project

--- a/Chatroom_ver1.0/package.json
+++ b/Chatroom_ver1.0/package.json
@@ -4,6 +4,7 @@
   "description": "LimChat_with express.js & socket.io",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "nodemon app.js"
   },
   "repository": {
