--- a/Chatroom_ver1.0/package.json
+++ b/Chatroom_ver1.0/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "socket.io": "^4.0.1"
   }
 }
